<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp">



        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/hint_text"
            android:src="@drawable/gift" />

        <ImageView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_add_photo"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/hint_text" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/photo_descriptor"
        android:textColor="@color/colorPrimaryDarkDark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/hint_text"
        style="@style/EditTextCustomHolo"
        />

    <Spinner
        android:id="@+id/spinnerCategories"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/complete_transaction_button"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        android:text="@string/submit" />

</LinearLayout>