<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:id="@+id/rootRL"

    android:weightSum="1">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_weight="0.49" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        style="@style/facebookButton"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!--<ScrollView-->
        <!--android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            >

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:colorControlActivated="@color/colorPrimary"
                style="@style/EditTextCustomHolo"

                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            >

            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:colorControlActivated="@color/colorPrimary"
                android:maxLines="1"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                style="@style/EditTextCustomHolo"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textSize="17sp"
                style="@style/buttonStyle"
                />

    </LinearLayout>

    <TextView
        android:text="@string/nohave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDarkDark"
        android:textSize="14sp"
        android:id="@+id/sign_up_text"
        android:layout_weight="0.25" />

    <TextView
        android:text="Guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:id="@+id/guest_view_text"
        android:layout_weight="0.22" />

    <!--</ScrollView>-->
</LinearLayout>
