<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:contentScrim="@color/colorPrimary"

            app:expandedTitleGravity="bottom|center_horizontal"

            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <RelativeLayout
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Item"
                android:fitsSystemWindows="true"
                android:background="@color/darkBackground"
                android:scaleType="centerCrop"
                android:gravity="center"
                app:layout_collapseMode="parallax" >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/image_width"
                    android:layout_height="@dimen/image_width"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/backdrop"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp"

                    />
                </RelativeLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"


                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">



            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingLeft="5dp">
        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:id="@+id/card_view_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/details_profile"
                    android:contentDescription="@string/details_profile_content_desc"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/giver_details"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        style="@style/profileHeader"
                        android:text="@string/locate_item"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        style="@style/smallText"
                        android:text="@string/filler_text_bio"/>


                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/locate_button"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/locationButton"
            android:drawableStart="@drawable/ic_location"
            android:text="@string/locate_item" />

        <Button
            android:id="@+id/message_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_message"
            android:text="@string/message_person"
            style="@style/messageButton"
            />

        <Button
            android:id="@+id/complete_transaction_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonStyle"
            android:text="@string/complete_transaction"
            android:layout_marginTop="100dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>